# cpp_projects

Array_template/: CMakeLists.txt
Array_template/include/: my_array.h
Array_template/src/: main.cpp
BMP/: Makefile
BMP/include/: bmp.h
BMP/src/: bmp.c  main.c
Database/: Makefile
Database/include/: bin_manip.h  employees.h
Database/src/: bin_manip.cpp  employees.cpp  main.cpp
Huffman/: CMakeLists.txt
Huffman/include/: CLI.h  Huffman.h  HuffmanArchiver.h  Statistics.h
Huffman/src/: CLI.cpp  Huffman.cpp  HuffmanArchiver.cpp  Statistics.cpp  main.cpp
Huffman/test/: TestCLI.cpp  TestHuffmanAlgo.cpp  TestHuffmanArchiver.cpp  TestStatistics.cpp
IO/: Makefile
IO/include/: clist.h
IO/src/: clist.c  main.c
Intrusive_list/: Makefile
Intrusive_list/include/: clist.h
Intrusive_list/src/: clist.c  main.c
Linq/: CMakeLists.txt
Linq/include/: linq.hpp
Linq/src/: smoke_test.cpp
Matrix/: Makefile
Matrix/include/: matrix.h
Matrix/src/: main.cpp  matrix.cpp
Mergesort/: Makefile
Mergesort/include/: mergesort.h  my_memcpy.h
Mergesort/src/: main.c  mergesort.c  my_memcpy.c
Shared_ptr/include/: shared_ptr.hpp
Shared_ptr/src/: shared_ptr.cpp
Vector_template/: CMakeLists.txt
Vector_template/include/: my_vector.h  my_vector_impl.h
Vector_template/src/: main.cpp
XO/: Makefile
XO/include/: Board.h  BoardTest.h  StdioBoardView.h  Test.h
XO/src/: Board.cpp  StdioBoardView.cpp  main.cpp
XO/test/: BoardTest.cpp  main_test.cpp  test.cpp
